--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 dotenv = "0.15.0"
 reqwest = { version = "0.12.23", features = ["json"] }
+scraper = "0.24.0"
 serde_json = "1.0.143"
 serenity = "0.12.4"
 tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
